Change directory the build should be output to
This seems to have changed to 'dist' where it was 'public' before? I ran into errors and changing this value (as per the error message) got it working again.

--- a/pages/guides/deploying-nuxtjs-with-zeit-now.mdx
+++ b/pages/guides/deploying-nuxtjs-with-zeit-now.mdx
@@ -49,7 +49,7 @@ Before deploying with ZEIT Now, provide Nuxt.js with instructions on which direc
 {
   ...
   "generate": {
-    "dir": "public"
+    "dir": "dist"
   }
 }
 ```
